--- a/SpeakerMeet.API/SpeakerMeet.API.csproj
+++ b/SpeakerMeet.API/SpeakerMeet.API.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SpeakerMeet.DTO\SpeakerMeet.DTO.csproj" />
+    <ProjectReference Include="..\SpeakerMeet.Services\SpeakerMeet.Services.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
