TDD - add user profile repository

--- a/SpeakerMeet.Services/SpeakerMeet.Services.csproj
+++ b/SpeakerMeet.Services/SpeakerMeet.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpeakerMeet.DTO\SpeakerMeet.DTO.csproj" />
+    <ProjectReference Include="..\SpeakerMeet.Repositories.Interfaces\SpeakerMeet.Repositories.Interfaces.csproj" />
     <ProjectReference Include="..\SpeakerMeet.Services.Interfaces\SpeakerMeet.Services.Interfaces.csproj" />
   </ItemGroup>
 
