--- a/SpeakerMeet.DTO/SpeakerMeet.DTO.csproj
+++ b/SpeakerMeet.DTO/SpeakerMeet.DTO.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SpeakerMeet.Repositories.Interfaces\SpeakerMeet.Repositories.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
